--- a/_variables.scss
+++ b/_variables.scss
@@ -1,1 +1,4 @@
 /*Este fichero es parcial y se añade a otro-- viene a ser como un include*/
+$fondo: #aaa000;
+$cabecera:#ff0000;
+$parrafo: #aa40c5;
